Added /topSecret_split GET to calculate x position between all satellites and hidden message, considering there are at least 3 satellites